adds dependency on expressjs as server

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "@toomanydaves/pinshow"
-, "version": "0.1.0"
-, "private": false
-, "description": "OAuth for Pinterest, board or pins selector, then a full screen slideshow of images. Created for use with FireTV."
-, "keywords": [
-    "pinterest"
-  , "slideshow"
-  , "firetv"
-  ] 
-, "homepage": "http://pinshow.herokuapp.com"
-, "license": "MIT"
+  "name": "@toomanydaves/pinshow",
+  "version": "0.1.0",
+  "private": false,
+  "description": "OAuth for Pinterest, board or pins selector, then a full screen slideshow of images. Created for use with FireTV.",
+  "keywords": [
+    "pinterest",
+    "slideshow",
+    "firetv"
+  ],
+  "homepage": "http://pinshow.herokuapp.com",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.15.3"
+  }
 }
